# few-shot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
few_shot/: __init__.py  decorator.py  example.py  exceptions.py  formatter.py
tests/: test_decorator.py
