[tool.poetry]
name = "few_shot"
version = "0.1.0"
description = "<A simple decorator for injecting few-shot examples into a function docstring, validating against its type hints.>"
authors = ["SlapDrone <slapdrone@proton.me>"]
license = "MIT"
packages = [{include = "few_shot"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "*"
black = "*"
ruff = "*"
jupyter = "^1.0.0"

[tool.poetry.extras]
marvin = ["marvin"]
function = ["openai-function-call"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "build", "examples"]

[tool.ruff]
ignore = ["E501"]
exclude = [
    ".venv",
    "__pycache__",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    "examples",
    "notebooks",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
